# scaffolding

./: .gitignore  CMakeLists.txt  Makefile  README.md  __init__.py  _cuda_kernels.cu  _cuda_kernels.cuh  _cuda_ops.pyx  _cuda_ops_decl.h  _mps_ops.pyx  _tensor_ops.pyx  autograd.py  device.py  dtype.py  pyproject.toml  requirements.txt  setup.py  tensor.py
backends/: __init__.py  cuda.py  cudnn.py  mps.py
cuda/: __init__.py  amp.py
diffusion/: __init__.py  models.py  pipelines.py  schedulers.py  tora.py  utils.py
diffusion/pipelines/: __init__.py  tora.py
distributed/: __init__.py
nn/: __init__.py  functional.py  init.py  layers.py  module.py  parallel.py  parameter.py  utils.py  video.py
optim/: __init__.py  lr_scheduler.py  optimizer.py
tests/: smoke_test.py  test_accelerate.py  test_conv_video.py  test_cuda_perf.py  test_diffusion.py  test_hf_video.py  test_mps_ops.py  test_mps_perf_vs_torch.py  test_multigpu.py  test_perf_vs_torch.py  test_tora_gpu_memory.py  test_training_perf.py
utils/: __init__.py  checkpoint.py
