# ╔══════════════════════════════════════════════════════════════════════╗
# ║  Scaffolding — Deep Learning Framework                               ║
# ║  Copyright © 2026 Helix Technologies, LLC. All rights reserved.      ║
# ╚══════════════════════════════════════════════════════════════════════╝

[build-system]
requires = ["setuptools>=68.0", "wheel", "cython>=3.0", "numpy>=1.24"]
build-backend = "setuptools.build_meta"

[project]
name = "scaffolding"
version = "0.1.0"
description = "A deep learning framework written entirely in Python and Cython — NumPy + Apple Accelerate"
readme = "README.md"
license = {text = "Proprietary"}
requires-python = ">=3.10"
authors = [
    {name = "Helix Technologies, LLC", email = "engineering@helixtechnologies.dev"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Cython",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.24",
]

[project.optional-dependencies]
dev = [
    "cython>=3.0",
    "pytest>=7.0",
    "pytest-benchmark",
]

[tool.setuptools.package-dir]
scaffolding = "."
"scaffolding.nn" = "nn"
"scaffolding.optim" = "optim"
"scaffolding.backends" = "backends"
"scaffolding.cuda" = "cuda"
"scaffolding.distributed" = "distributed"
"scaffolding.utils" = "utils"

[tool.setuptools.packages]
find = {}

# Explicit package list (matches setup.py)
# scaffolding, scaffolding.nn, scaffolding.optim, scaffolding.backends,
# scaffolding.cuda, scaffolding.distributed, scaffolding.utils

[tool.cython-lint]
max-line-length = 120
